# webrtc-echoes

./: .gitignore  .gitmodules  DataChannel_Echo_test_results.md  PeerConnection_test_results.md  README.md  bump.txt  datachannel_test_results.md  dummy.md  echo_test_results.md
.github/workflows/: datachannel_echo-test.yml  deploytoAksCluster.yml  interop-datachannel-echo.yml  interop-peerconnection-echo.yml  peerconnection-test.yml  slash-command.yml
aiortc/: Dockerfile  README.md  client.py  client.sh  index.html  server.py
doc/: DataChannelEchoTestSpecification.md  EchoTestDockerRequirements.md  EchoTestSpecification.md  PeerConnectionTestSpecification.md
gstreamer/: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile-Gstreamerbuilder  README.md  gstreamer-webrtc-echo.c  gstreamer-webrtc-echo.sln  gstreamer-webrtc-echo.vcxproj  index.html
janus/: Dockerfile  JanusModel.cs  JanusRestClient.cs  JanusWebRTCEcho.csproj  JanusWebRTCEcho.sln  Program.cs  README.md  entrypoint-dotnet.sh
kurento/: Dockerfile  KurentoModel.cs  KurentoWebRTCEcho.csproj  KurentoWebRTCEcho.sln  Program.cs  README.md  entrypoint-dotnet.sh
kurento/Properties/PublishProfiles/: FolderProfile.pubxml
libdatachannel/: CMakeLists.txt  Dockerfile  README.md  client-datachannel.sh  client.cpp  client.sh  server.cpp
libwebrtc/: CMakeLists.txt  Dockerfile  Dockerfile-AllInOne  Dockerfile-Builder  HttpSimpleServer.cpp  HttpSimpleServer.h  PcFactory.cpp  PcFactory.h  PcObserver.cpp  PcObserver.h  README.md  buildtest.cpp  fake_audio_capture_module.cc  fake_audio_capture_module.h  libwebrtc-webrtc-echo.cpp  libwebrtc-webrtc-echo.sln  libwebrtc-webrtc-echo.vcxproj  libwebrtc-webrtc-echo.vcxproj.filters  libwebrtc_linux_build_results.txt  webrtc_lib_link_test.cc  webrtc_lib_link_test_libevent.cc
manifests/: deployment.yml  service.yml
pion/: Dockerfile  README.md  client.sh  go.mod  go.sum  main.go
pion/client/: README.md  go.mod  go.sum  main.go
sipsorcery/: Dockerfile  Program.cs  README.md  client-datachannel.sh  client.sh  webrtc-echo.csproj  webrtc-echo.sln
sipsorcery/client/: Program.cs  README.md  webrtc-echo-client.csproj  webrtc-echo-client.sln
sipsorcery/server/: Program.cs  README.md  index.html  webrtc-echo.csproj  webrtc-echo.sln
test/: collate-results.py  echo_test_results.md
webrtc-rs/: Dockerfile
webrtc-rs/client/: Cargo.toml  README.md
webrtc-rs/client/src/: main.rs
webrtc-rs/server/: Cargo.toml  README.md
webrtc-rs/server/src/: main.rs
werift/: Dockerfile  README.md  client-datachannel.sh  client.sh  client.ts  main.js  main.ts  package.json  server.ts  tsconfig.json
