[package]
name = "server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webrtc = "=0.2.1"
interceptor = "=0.4.0"
tokio = { version = "1.12.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.19"
env_logger = "0.9.0"
log = "0.4.14"
clap = "2"
hyper = { version = "0.14.13", features = ["full"] }
anyhow = "1.0.44"
lazy_static = "1.4"
async-trait = "0.1.42"
tokio-util = "0.6.8"